--- a/war/Comss.html
+++ b/war/Comss.html
@@ -63,7 +63,7 @@
       </div>
     </noscript>
 
-    <h1>Web Application Starter Project</h1>
+    <h1>Test Analista - ISAAC FLOREZ</h1>
 <div id="containerMain">
 </div>
    
